<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />


    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="Enter email"
        android:paddingHorizontal="15dp"
        android:inputType="textEmailAddress"
         />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:hint="Enter password"
        android:paddingHorizontal="15dp"
        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/btnForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="end"
        android:text="Forgot Password?"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="Login"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btnSignupnavigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:text="Don't have an account? Sign up  "
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/displayloginresult"
        android:layout_height="wrap_content"/>
</LinearLayout>
